Pre-merge code formattings.